<resources>
    <string name="app_name">My Recipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_night_on" translatable="false">on</string>
    <string name="pref_night_off" translatable="false">off</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Day mode</string>

    <string name="menu_home">Home</string>
    <string name="menu_viewrecipes">View Recipes</string>
    <string name="menu_addrecipe">Add Recipe</string>
    <string name="add_image_contentdescription">Image view that is a button to add an image</string>
    <string name="notes_hint">Notes:</string>
    <string name="ingredients_hint">Ingredients:</string>
    <string name="directions_hint">Directions:</string>
    <string name="title_hint">Title:</string>
    <string name="save_recipe_menu_item_title">Save Recipe</string>
    <string name="image_content_description_text">image</string>
    <string name="creation_date_text">Creation Date:</string>
    <string name="image_button_content_descrioption_text">image button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_button_description_text">cancel button</string>
    <string name="save_button_description_text">save button</string>
    <string name="recipe_ideas_title_text">Recipe Ideas</string>
    <string name="search_menu_text">Search</string>
    <string name="refresh_menu_text">Refresh</string>
    <string name="dessert_text">Dessert</string>
    <string name="mexican_text">Mexican</string>
    <string name="indian_text">Indian</string>
    <string name="breakfast_text">Breakfast</string>
    <string name="american_text">American</string>
    <string name="chinese_text">Chinese</string>
    <string name="thai_text">Thai</string>
    <string name="l">L</string>
    <string name="todo">TODO</string>
    <string name="appetizers">Appetizers</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string-array name="cuisines">
        <item>African</item>
        <item>American</item>
        <item>British</item>
        <item>Cajun</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Eastern European</item>
        <item>European</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Jewish</item>
        <item>Korean</item>
        <item>atin American</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Nordic</item>
        <item>Southern</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Vietnamese</item>
    </string-array>
    <string-array name="proteins">
        <item>chicken</item>
        <item>beef</item>
        <item>pork</item>
        <item>duck</item>
        <item>lamb</item>
        <item>turkey</item>
        <item>vegetable</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="dinner">Dinner</string>
</resources>