<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="recipe"
            type="com.mattg.myrecipes.db.Recipe" />
        <variable
            name="clickListener"
            type="com.mattg.myrecipes.ui.viewrecipes.ClickListener" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/recipecubesbackground2"
        android:fitsSystemWindows="false"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp">


        <ImageView
            android:id="@+id/imageView_item_image"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_content_description_text"
            android:loadImage="@{recipe.imageOne}"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/textView_itemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="#E9FFFFFF"
            android:fontFamily="@font/alike"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView_item_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@{recipe.title}" />

        <TextView
            android:id="@+id/textView_itemdate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/alike"
            android:text="@string/creation_date_text"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_image"
            app:layout_constraintTop_toBottomOf="@+id/textView_itemTitle" />

        <TextView
            android:id="@+id/textView_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alike"
            android:textColor="@android:color/secondary_text_light"
            app:layout_constraintStart_toStartOf="@+id/textView_itemdate_title"
            app:layout_constraintTop_toBottomOf="@+id/textView_itemdate_title"
            tools:text="@{recipe.date}" />

        <RatingBar
            android:id="@+id/ratingBar2"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="81dp"
            android:layout_height="17dp"
            android:layout_marginTop="16dp"
            android:numStars="5"
            android:progressTint="@color/secondaryColor"
            android:rating="@{recipe.rating}"
            android:saveEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/imageButton_itemedit"
            app:layout_constraintStart_toStartOf="@+id/imageButton_itemedit"
            app:layout_constraintTop_toBottomOf="@+id/textView_item_date" />

        <ImageButton
            android:id="@+id/imageButton_itemdelete"

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/image_button_content_descrioption_text"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_itemedit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_item_image"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar2"
            app:srcCompat="@drawable/cross" />

        <ImageButton
            android:id="@+id/imageButton_itemedit"

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/image_button_content_descrioption_text"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_itemview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_itemdelete"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar2"
            app:srcCompat="@drawable/pencil" />

        <ImageButton
            android:id="@+id/imageButton_itemview"

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/image_button_content_descrioption_text"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_itemedit"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar2"
            app:srcCompat="@drawable/preview2" />

        <TextView
            android:id="@+id/tv_isLeftovers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:setVisible="@{recipe.isLeftover()}"
            android:text="@string/l"
            android:textColor="@color/secondaryColor"
            android:textSize="30sp"
            android:textStyle="bold|italic"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_itemdate_title"
            app:layout_constraintTop_toTopOf="@+id/textView_itemdate_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>